--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 ---
-layout: default
-title: "Home"
+layout: page
+title: "About"
 ---
-
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+I am a PhD candidate at UCLA working with Andrew Wikenheiser. For my thesis, I am investigating orbitofrontal cortex 
+sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale 
+electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous 
+value space are represented and evaluated by the lateral and medial orbitofrontal cortex.
+Prior to graduate school, I was a post-baccalaureate researcher at UCLA with Andrew Wikenheiser. My project investigated whether goal 
+representations in the orbitofrontal cortex and hippocampus were influenced by the spatial predictability of the associated 
+reward. 
+Before my post-bacc, I got a Bachelor of Science in Behavioral Neuroscience from the University of British Columbia where I worked with 
+Jeremy Seamans.
