--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: "About Me"
 ---
+## About Me
+
 I am a PhD candidate at UCLA working with Andrew Wikenheiser. For my thesis, I am investigating orbitofrontal cortex 
 sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale 
 electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous 
