--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 
 ---
 I am a PhD candidate at UCLA working with Andrew Wikenheiser. For my thesis, I am investigating orbitofrontal cortex 
