--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
 layout: page
+title: "About Me"
 ---
 <p>
-  I am a PhD candidate at UCLA working with Andrew Wikenheiser. For my thesis, I am investigating orbitofrontal cortex sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous value space are represented and evaluated by the lateral and medial orbitofrontal cortex.
+  I am a PhD candidate in the Department of Psychology at UCLA working with Andrew Wikenheiser. For my thesis project, I am investigating orbitofrontal cortex sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous value space are represented and evaluated by the lateral and medial orbitofrontal cortex.
 </p>
 <p>
-  Prior to graduate school, I was a post-baccalaureate researcher at UCLA with Andrew Wikenheiser. My project investigated whether goal representations in the orbitofrontal cortex and hippocampus were influenced by the spatial predictability of the associated reward. Before my post-bacc, I got a Bachelor of Science in Behavioral Neuroscience from the University of British Columbia where I worked with Jeremy Seamans.
+  Prior to graduate school, I was a post-baccalaureate researcher at UCLA with Andrew Wikenheiser. My project investigated the infuence of spatial predictability of reward location on goal representations in the orbitofrontal cortex and hippocampus. Before my post-bacc, I completed a Bachelor of Science in Behavioral Neuroscience from the University of British Columbia where I worked with Jeremy Seamans.
 </p>
 <p>
-  Contact: sgupta@psych.ucla.edu
+  Contact information: sgupta@psych.ucla.edu
 </p>
 
 
