--- a/pubs.html
+++ b/pubs.html
@@ -4,8 +4,8 @@ layout: page
 ---
 
 <p>
- Bimbard, C., Takacs, F., Catarino, J. A., Fabre, J. M. J., <b>Gupta, S.</b> et al. (2024). An adaptable, reusable, and light implant for chronic Neuropixels probes. <i>eLife</i>. [[link](https://elifesciences.org/reviewed-preprints/98522)].
+ Bimbard, C., Takacs, F., Catarino, J. A., Fabre, J. M. J., <b>Gupta, S.</b> et al. (2024). An adaptable, reusable, and light implant for chronic Neuropixels probes. <i>eLife</i>.
 </p>
 <p>
- Garcia, M., <b>Gupta, S.</b>, & Wikenheiser, A. M. (2023). Sex-differences in patch-leaving foraging decisions in rats. <i>Oxford Open Neuroscience</i>. [[link](https://pubmed.ncbi.nlm.nih.gov/38596244/)].
+ Garcia, M., <b>Gupta, S.</b>, & Wikenheiser, A. M. (2023). Sex-differences in patch-leaving foraging decisions in rats. <i>Oxford Open Neuroscience</i>.
 </p>
