--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: "About Me"
   Before beginning my doctoral studies, I worked as a post-baccalaureate researcher at UCLA in Dr. Wikenheiser's lab. My project investigated how the spatial predictability of reward location influenced goal representations in the orbitofrontal cortex and hippocampus. Prior to my post-bacc work, I earned a Bachelor of Science in Behavioral Neuroscience from the University of British Columbia, where I was an undergraduate researcher with Jeremy Seamans.
 </p>
 <p>
-  Contact information: sgupta@psych.ucla.edu
+  Contact: sgupta@psych.ucla.edu
 </p>
 
 
