--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "About Me"
 ---
 <p>
-  I am a PhD candidate in the Department of Psychology at UCLA working with Dr. Andrew Wikenheiser. For my thesis project, I am investigating orbitofrontal cortex sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous value space are represented and evaluated by the lateral and medial orbitofrontal cortex.
+  I am a PhD candidate in the Department of Psychology at UCLA working with <a href="https://wikenheiserlab.psych.ucla.edu/" target="_blank" rel="noopener noreferrer">Dr. Andrew Wikenheiser</a>. For my thesis project, I am investigating orbitofrontal cortex sub-region contributions to value-based decisions in an open-field environment. I use movement data and large-scale electrophysiological recordings to understanding how ethologically relevant and non-stereotyped decisions in a continuous value space are represented and evaluated by the lateral and medial orbitofrontal cortex.
 </p>
 <p>
   Before beginning my doctoral studies, I worked as a post-baccalaureate researcher at UCLA in Dr. Wikenheiser's lab. My project investigated how the spatial predictability of reward location influenced goal representations in the orbitofrontal cortex and hippocampus. Prior to my post-bacc work, I earned a Bachelor of Science in Behavioral Neuroscience from the University of British Columbia, where I was an undergraduate researcher with Jeremy Seamans.
