--- a/pubs.html
+++ b/pubs.html
@@ -4,8 +4,8 @@ layout: page
 ---
 
 <p>
- Bimbard, C., Takacs, F., Catarino, J. A., Fabre, J. M. J., <b>Gupta, S.</b> et al. (2024). An adaptable, reusable, and light implant for chronic Neuropixels probes. <i>eLife</i>.
+ Bimbard, C., Takacs, F., Catarino, J. A., Fabre, J. M. J., <strong>Gupta, S.</strong> et al. (2024). An adaptable, reusable, and light implant for chronic Neuropixels probes. <i>eLife</i>. [<a href="https://elifesciences.org/reviewed-preprints/98522" target="_blank" rel="noopener noreferrer">link</a>].
 </p>
 <p>
- Garcia, M., <b>Gupta, S.</b>, & Wikenheiser, A. M. (2023). Sex-differences in patch-leaving foraging decisions in rats. <i>Oxford Open Neuroscience</i>.
+ Garcia, M., <strong>Gupta, S.</strong>, & Wikenheiser, A. M. (2023). Sex-differences in patch-leaving foraging decisions in rats. <i>Oxford Open Neuroscience</i>. [<a href="https://academic.oup.com/oons/article/doi/10.1093/oons/kvad011/7320296" target="_blank" rel="noopener noreferrer">link</a>].
 </p>
